--- a/app/src/main/res/layout/activity_assesments_details.xml
+++ b/app/src/main/res/layout/activity_assesments_details.xml
@@ -7,8 +7,8 @@
         android:layout_height="match_parent"
         tools:context=".AssessmentsDetails">
     <ScrollView
-            android:layout_width="407dp"
-            android:layout_height="722dp"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginStart="1dp"
             android:layout_marginTop="1dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -107,26 +107,26 @@
                         android:hint="String">
                 </EditText>
             </LinearLayout>
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                <Button
+                        android:id="@+id/saveBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:clickable="true"
+                        android:onClick="saveBtn"
+                        android:text="Save"
+                        android:layout_marginLeft="16dp"/>
+                <Button
+                        android:onClick="deleteBtn"
+                        android:text="Delete"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/deleteBtn"
+                        android:layout_marginLeft="16dp"/>
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
-    <Button
-            android:id="@+id/saveBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:onClick="saveBtn"
-            android:text="Save"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginBottom="16dp"
-            android:layout_marginStart="16dp"/>
-    <Button
-            android:onClick="deleteBtn"
-            android:text="Delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/deleteBtn"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
-            app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
