--- a/app/src/main/res/layout/activity_notes_add.xml
+++ b/app/src/main/res/layout/activity_notes_add.xml
@@ -7,13 +7,12 @@
         android:layout_height="match_parent"
         tools:context=".NotesAdd">
     <ScrollView
-            android:layout_width="407dp"
-            android:layout_height="722dp"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginStart="1dp"
             android:layout_marginTop="1dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:id="@+id/scrollView3">
+            app:layout_constraintTop_toTopOf="parent">
         <LinearLayout android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="vertical">
@@ -47,6 +46,10 @@
                         android:hint="String">
                 </EditText>
             </LinearLayout>
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
             <EditText
                     android:id="@+id/editCourseNote"
                     android:layout_width="match_parent"
@@ -58,16 +61,19 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"/>
         </LinearLayout>
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+            <Button
+                    android:id="@+id/saveBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:clickable="true"
+                    android:onClick="saveBtn"
+                    android:text="Save"
+                    android:layout_marginLeft="16dp"/>
+        </LinearLayout>
+        </LinearLayout>
     </ScrollView>
-    <Button
-            android:id="@+id/saveBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:onClick="saveBtn"
-            android:text="Save"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginBottom="16dp"
-            android:layout_marginStart="16dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
