--- a/app/src/main/res/layout/activity_terms_details.xml
+++ b/app/src/main/res/layout/activity_terms_details.xml
@@ -7,8 +7,8 @@
         android:layout_height="match_parent"
         tools:context=".CoursesDetails">
     <ScrollView
-            android:layout_width="407dp"
-            android:layout_height="600dp"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginStart="1dp"
             android:layout_marginTop="1dp"
             app:layout_constraintStart_toStartOf="parent"
